@@ -7,6 +7,7 @@
 5.   Disable SSL session persistence. Qt 5.2.x or higher is required.
 6.   Upgraded NTRU files, 03/20/2015.
 7.   Upgraded OpenSSL products to version 1.0.2a on Windows.
+8.   Ignore duplicate keywords in link searching.
 
 0.20 (03/14/2015)
 
